--- a/index.html
+++ b/index.html
@@ -1,6 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="fa" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mahdi Riahi | Python Developer</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+            color: #e6e6ff;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+        h1 {
+            color: #4ecca3;
+            font-size: 2.5rem;
+        }
+        .projects {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 1.5rem;
+            border-radius: 10px;
+            margin-bottom: 2rem;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
+    <div class="container">
+        <header>
+            <h1>Mahdi Riahi</h1>
+            <p>Python Developer and Working on Django</p>
+        </header>
+        
+        <section class="projects">
+            <h2>Best Projects</h2>
+            <div class="project">
+                <h3>🏨 سیستم مدیریت هتل</h3>
+                <p>سیستم پیشرفته رزرواسیون با پایتون و شیءگرایی</p>
+                <a href="https://github.com/mahdi-riahi/Hotel-Management-System">
+                    <img src="https://img.shields.io/badge/View_on_GitHub-181717?style=for-the-badge&logo=github&logoColor=white">
+                </a>
+            </div>
+        </section>
+        
+        <footer>
+            <p>© 2023 ساخته‌شده با ❤️ برای جامعه برنامه‌نویسان</p>
+        </footer>
+    </div>
 </body>
 </html>
