--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <section class="projects">
             <h2>Best Projects</h2>
             <div class="project">
-                <h3>🏨 سیستم مدیریت هتل</h3>
-                <p>سیستم پیشرفته رزرواسیون با پایتون و شیءگرایی</p>
+                <h3>🏨 Hotel Management System</h3>
+                <p>Advanced Hotel Reservation with Python and OOP</p>
                 <a href="https://github.com/mahdi-riahi/Hotel-Management-System">
                     <img src="https://img.shields.io/badge/View_on_GitHub-181717?style=for-the-badge&logo=github&logoColor=white">
                 </a>
@@ -51,7 +51,7 @@
         </section>
         
         <footer>
-            <p>© 2023 ساخته‌شده با ❤️ برای جامعه برنامه‌نویسان</p>
+            <p>Made with ❤️ for developers 2025</p>
         </footer>
     </div>
 </body>
